[package]
name = "fbjira"
version = "0.1.7-alpha.0"
authors = ["icepuma <icepuma@godda.mn>"]
description = "Command line interface for jira"
license = "WTFPL"
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/brocode/fbjira"
keywords = ["cli", "automation", "developer-tools", "jira"]

[dependencies]
goji = "0.2.4"
clap = "2.32.0"
toml = "0.4.8"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
colored = "1.6.1"
dirs = "1.0.4"

[replace]
"openssl:0.9.24" = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }
